--- a/css/paperplate.css
+++ b/css/paperplate.css
@@ -40,7 +40,7 @@
     --right-body-second-x: 50;
     --right-body-second-y: 100;
     --right-body-third-x: 100;
-    --right-body-third-y: 100;
+    --right-body-third-y: 100; 
     display: block;
     cursor: pointer;
     position: relative;
@@ -59,122 +59,121 @@
     transform: rotate(calc(var(--rotate) * 1deg)) translateZ(0);
     -webkit-appearance: none;
     -webkit-tap-highlight-color: transparent;
-    .left,
-    .right {
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        opacity: var(--plane-opacity);
-        transform: translate(calc(var(--plane-x) * 1px), calc(var(--plane-y) * 1px)) translateZ(0);
-        &:before,
-        &:after {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            border-radius: calc(var(--border-radius) * 1px);
-            transform: translate(var(--x, .4%), var(--y, 0)) translateZ(0);
-            z-index: var(--z-index, 2);
-            background: var(--background, var(--left-wing-background));
+  }
+  .button .left,
+  .button .right {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    opacity: var(--plane-opacity);
+    transform: translate(calc(var(--plane-x) * 1px), calc(var(--plane-y) * 1px)) translateZ(0);
+  }
+  .button .left:before, .button .left:after,
+  .button .right:before,
+  .button .right:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: calc(var(--border-radius) * 1px);
+    transform: translate(var(--x, 0.4%), var(--y, 0)) translateZ(0);
+    z-index: var(--z-index, 2);
+    background: var(--background, var(--left-wing-background));
+    -webkit-clip-path: polygon(calc(var(--first-x, var(--left-wing-first-x)) * 1%) calc(var(--first-y, var(--left-wing-first-y)) * 1%), calc(var(--second-x, var(--left-wing-second-x)) * 1%) calc(var(--second-y, var(--left-wing-second-y)) * 1%), calc(var(--third-x, var(--left-wing-third-x)) * 1%) calc(var(--third-y, var(--left-wing-third-y)) * 1%));
             clip-path: polygon(calc(var(--first-x, var(--left-wing-first-x)) * 1%) calc(var(--first-y, var(--left-wing-first-y)) * 1%), calc(var(--second-x, var(--left-wing-second-x)) * 1%) calc(var(--second-y, var(--left-wing-second-y)) * 1%), calc(var(--third-x, var(--left-wing-third-x)) * 1%) calc(var(--third-y, var(--left-wing-third-y)) * 1%));
-        }
-    }
-    .left:after {
-        --x: 0;
-        --z-index: 1;
-        --background: var(--left-body-background);
-        --first-x: var(--left-body-first-x);
-        --first-y: var(--left-body-first-y);
-        --second-x: var(--left-body-second-x);
-        --second-y: var(--left-body-second-y);
-        --third-x: var(--left-body-third-x);
-        --third-y: var(--left-body-third-y);
-    }
-    .right:before {
-        --x: -.4%;
-        --z-index: 2;
-        --background: var(--right-wing-background);
-        --first-x: var(--right-wing-first-x);
-        --first-y: var(--right-wing-first-y);
-        --second-x: var(--right-wing-second-x);
-        --second-y: var(--right-wing-second-y);
-        --third-x: var(--right-wing-third-x);
-        --third-y: var(--right-wing-third-y);
-    }
-    .right:after {
-        --x: 0;
-        --z-index: 1;
-        --background: var(--right-body-background);
-        --first-x: var(--right-body-first-x);
-        --first-y: var(--right-body-first-y);
-        --second-x: var(--right-body-second-x);
-        --second-y: var(--right-body-second-y);
-        --third-x: var(--right-body-third-x);
-        --third-y: var(--right-body-third-y);
-    }
-    span {
-        display: block;
-        position: relative;
-        z-index: 4;
-        opacity: var(--text-opacity);
-        &.success {
-            z-index: 0;
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 8px;
-            transform: rotate(calc(var(--rotate) * -1deg)) scale(var(--success-scale)) translateZ(0);
-            opacity: var(--success-opacity);
-            color: var(--success);
-        }
-    }
-}
-
-html {
+  }
+  .button .left:after {
+    --x: 0;
+    --z-index: 1;
+    --background: var(--left-body-background);
+    --first-x: var(--left-body-first-x);
+    --first-y: var(--left-body-first-y);
+    --second-x: var(--left-body-second-x);
+    --second-y: var(--left-body-second-y);
+    --third-x: var(--left-body-third-x);
+    --third-y: var(--left-body-third-y);
+  }
+  .button .right:before {
+    --x: -.4%;
+    --z-index: 2;
+    --background: var(--right-wing-background);
+    --first-x: var(--right-wing-first-x);
+    --first-y: var(--right-wing-first-y);
+    --second-x: var(--right-wing-second-x);
+    --second-y: var(--right-wing-second-y);
+    --third-x: var(--right-wing-third-x);
+    --third-y: var(--right-wing-third-y);
+  }
+  .button .right:after {
+    --x: 0;
+    --z-index: 1;
+    --background: var(--right-body-background);
+    --first-x: var(--right-body-first-x);
+    --first-y: var(--right-body-first-y);
+    --second-x: var(--right-body-second-x);
+    --second-y: var(--right-body-second-y);
+    --third-x: var(--right-body-third-x);
+    --third-y: var(--right-body-third-y);
+  }
+  .button span {
+    display: block;
+    position: relative;
+    z-index: 4;
+    opacity: var(--text-opacity);
+  }
+  .button span.success {
+    z-index: 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 8px;
+    transform: rotate(calc(var(--rotate) * -1deg)) scale(var(--success-scale)) translateZ(0);
+    opacity: var(--success-opacity);
+    color: var(--success);
+  }
+  
+  html {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
-}
-
-* {
+  }
+  
+  * {
     box-sizing: inherit;
-    &:before,
-    &:after {
-        box-sizing: inherit;
-    }
-}
-
-
-/* // Center & dribbble */
-/* body {
+  }
+  *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Inter', Arial;
+    font-family: "Inter", Arial;
     background: #E1E6F9;
-    .dribbble {
-        position: fixed;
-        display: block;
-        right: 20px;
-        bottom: 20px;
-        img {
-            display: block;
-            height: 28px;
-        }
-    }
-    .twitter {
-        position: fixed;
-        display: block;
-        right: 64px;
-        bottom: 14px;
-        svg {
-            width: 32px;
-            height: 32px;
-            fill: #1da1f2;
-        }
-    }
-} */
+  }
+  body .dribbble {
+    position: fixed;
+    display: block;
+    right: 20px;
+    bottom: 20px;
+  }
+  body .dribbble img {
+    display: block;
+    height: 28px;
+  }
+  body .twitter {
+    position: fixed;
+    display: block;
+    right: 64px;
+    bottom: 14px;
+  }
+  body .twitter svg {
+    width: 32px;
+    height: 32px;
+    fill: #1da1f2;
+  }
