--- a/css/paperplate.css
+++ b/css/paperplate.css
@@ -1,7 +1,7 @@
 .button {
-    --primary: #275EFE;
-    --primary-dark: #2055EE;
-    --primary-darkest: #133FC0;
+    --primary: #93c47d;
+    --primary-dark: #6aa84f;
+    --primary-darkest: #93c47d;
     --text: #FFFFFF;
     --text-opacity: 1;
     --success: #2B3044;
@@ -40,10 +40,11 @@
     --right-body-second-x: 50;
     --right-body-second-y: 100;
     --right-body-third-x: 100;
-    --right-body-third-y: 100; 
+    --right-body-third-y: 100;
     display: block;
     cursor: pointer;
     position: relative;
+
     border: 0;
     padding: 8px 0;
     min-width: 100px;
@@ -135,28 +136,28 @@
     opacity: var(--success-opacity);
     color: var(--success);
   }
-  
+
   html {
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
   }
-  
+
   * {
     box-sizing: inherit;
   }
   *:before, *:after {
     box-sizing: inherit;
   }
-  
-  body {
+
+  /* body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: "Inter", Arial;
     background: #E1E6F9;
-  }
-  body .dribbble {
+  } */
+  /* body .dribbble {
     position: fixed;
     display: block;
     right: 20px;
@@ -176,4 +177,4 @@
     width: 32px;
     height: 32px;
     fill: #1da1f2;
-  }
+  } */
