--- a/css/paperplate.css
+++ b/css/paperplate.css
@@ -178,3 +178,26 @@
     height: 32px;
     fill: #1da1f2;
   } */
+
+
+  /* .typing-demo {
+    width: 22ch;
+    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: 'Playfair display', Georgia, Serif;
+    font-size: 2em;
+  }
+
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  }
+
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  } */
