--- a/css/paperplate.css
+++ b/css/paperplate.css
@@ -4,7 +4,7 @@
     --primary-darkest: #93c47d;
     --text: #FFFFFF;
     --text-opacity: 1;
-    --success: #2B3044;
+    --success: #f3f6f4;
     --success-scale: .2;
     --success-opacity: 0;
     --border-radius: 7;
